Fix body max-width on mobile

--- a/post.css
+++ b/post.css
@@ -1,8 +1,9 @@
 /* mostly generated by pandoc */
 
 @media (max-width: 600px) {
+    html,
     body {
-        max-width: calc(100% - 2em);
+        max-width: calc(100% - 2em) !important;
         font-size: 1em !important;
     }
 
